opam-version: "2.0"
maintainer: "Romain Bardou"
authors: [ "Romain Bardou" ]
homepage: "https://github.com/rbardou/clap"
bug-reports: "https://github.com/rbardou/clap/issues"
dev-repo: "git+https://github.com/rbardou/clap.git"
license: "MIT"
depends: []
build: [ ["dune" "build" "-p" name "-j" jobs] ]
synopsis: "Command-Line Argument Parsing, imperative style with a consumption mechanism"
